# kde1-kdegames

./: CMakeLists.txt
common/: config.h.in
ksirtet/: net.cpp  net.h
po/: kabalone.pot  kasteroids.pot  kblackbox.pot  kmahjongg.pot  kmines.pot  konquest.pot  kpat.pot  kpoker.pot  kreversi.pot  ksame.pot  kshisen.pot  ksirtet.pot  ksmiletris.pot  ksnake.pot  ksokoban.pot
po/br/: kabalone.po  kasteroids.po  kblackbox.po  kmahjongg.po  kmines.po  konquest.po  kpat.po  kpoker.po  kreversi.po  ksame.po  kshisen.po  ksirtet.po  ksmiletris.po  ksnake.po  ksokoban.po
po/cs/: kblackbox.po  konquest.po  ksame.po  ksmiletris.po  ksnake.po  ksokoban.po
po/de/: kabalone.po  kasteroids.po  kpat.po
po/el/: kmahjongg.po  kpat.po  kreversi.po
po/es/: konquest.po  ksirtet.po
po/fi/: kabalone.po  kasteroids.po  kmahjongg.po  kmines.po  kpat.po  kpoker.po  kreversi.po  kshisen.po  ksnake.po
po/hr/: ksnake.po
po/hu/: kpoker.po  kreversi.po
po/is/: kabalone.po  kasteroids.po  kblackbox.po  kmahjongg.po  kmines.po  konquest.po  kpat.po  kpoker.po  kreversi.po  ksame.po  kshisen.po  ksirtet.po  ksmiletris.po  ksnake.po  ksokoban.po
po/it/: kabalone.po  kasteroids.po  kblackbox.po  kmahjongg.po  kmines.po  kpat.po  kreversi.po  kshisen.po  ksirtet.po
po/ja/: ksnake.po
po/mk/: kmines.po  ksmiletris.po
po/nl/: kabalone.po  kasteroids.po  kblackbox.po  kmahjongg.po  kmines.po  kpat.po  kpoker.po  kreversi.po  ksame.po  kshisen.po  ksirtet.po  ksnake.po
po/pt/: kabalone.po  kasteroids.po  kblackbox.po  kmahjongg.po  kmines.po  konquest.po  kpat.po  kpoker.po  kreversi.po  ksame.po  kshisen.po  ksirtet.po  ksnake.po  ksokoban.po
po/pt_BR/: kabalone.po  kasteroids.po  kblackbox.po  kmahjongg.po  kmines.po  konquest.po  kpat.po  kpoker.po  kreversi.po  ksame.po  kshisen.po  ksirtet.po  ksmiletris.po  ksnake.po  ksokoban.po
po/ro/: kabalone.po  kasteroids.po  kmines.po  kpat.po  kpoker.po  kreversi.po  ksirtet.po
po/ru/: kasteroids.po
po/sk/: ksame.po
po/sv/: kabalone.po  kasteroids.po  kblackbox.po  kmahjongg.po  kmines.po  konquest.po  kpat.po  kpoker.po  kreversi.po  ksame.po  kshisen.po  ksirtet.po  ksnake.po
po/zh_CN.GB2312/: kabalone.po  kasteroids.po  kblackbox.po  kmahjongg.po  kmines.po  kpat.po  kpoker.po  kreversi.po  ksame.po  kshisen.po  ksirtet.po  ksnake.po
po/zh_TW.Big5/: kabalone.po  kasteroids.po  kmahjongg.po  kmines.po  kpat.po  kpoker.po  kreversi.po  kshisen.po  ksirtet.po  ksnake.po
